add filter on Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,23 +71,23 @@
           <h1 class="visually-hidden">portfolio</h1>
         <ul class="btn__list">
           <li class="btn__item">
-            <button class="btn__portfolio" type="button">Усі</button>
+            <button class="btn__portfolio" type="button" data-id="all">Усі</button>
           </li>
           <li class="btn__item">
-            <button class="btn__portfolio" type="button">Веб-сайти</button>
+            <button class="btn__portfolio" type="button" data-id="site">Веб-сайти</button>
           </li>
           <li class="btn__item">
-            <button class="btn__portfolio" type="button">Додатки</button>
+            <button class="btn__portfolio" type="button" data-id="app">Додатки</button>
           </li>
           <li class="btn__item">
-            <button class="btn__portfolio" type="button">Дизайн</button>
+            <button class="btn__portfolio" type="button" data-id="design">Дизайн</button>
           </li>
           <li class="btn__item">
-            <button class="btn__portfolio" type="button">Маркетинг</button>
+            <button class="btn__portfolio" type="button" data-id="marketing">Маркетинг</button>
           </li>
         </ul>
         <ul class="card-list card__set">
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item site">
             <a class="card-list__link" href="#">
               <div class="card-list__thumb">
                 <picture>
@@ -124,7 +124,7 @@
               </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item design">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -161,7 +161,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item app">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -198,7 +198,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item marketing">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -235,7 +235,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item app">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -272,7 +272,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item site">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -309,7 +309,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item design">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -346,7 +346,7 @@
             </div>
             </a>
           </li>
-          <li class="card-list__item card__set--item">
+          <li class="card-list__item card__set--item ">
             <a class="card-list__link" href="">
               <div class="card-list__thumb">
                 <picture>
@@ -557,7 +557,8 @@
       rel="noopener noreferrer">LinkedIn</a></li>
   </ul>
 </div>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/filter.js"></script>
 <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
