--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -764,7 +763,7 @@
       rel="noopener noreferrer">LinkedIn</a></li>
   </ul>
 </div>
-<a class="up__button" href="#"><svg class="up__arrow">
+<a href="#"><svg class="up__arrow">
   <use href="./images/icons.svg#icon-up"></use>
 </svg></a>
 <script src="./js/modal.js"></script>
