--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- HEADER -->
@@ -40,7 +39,7 @@
                 >Портфоліо</a
               >
             </li class="nav__item">
-            <li><a class="nav__link" href="#">Контакти</a></li>
+            <li><a class="nav__link" href="./contacts.html">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contact">
@@ -557,7 +556,9 @@
       rel="noopener noreferrer">LinkedIn</a></li>
   </ul>
 </div>
-    <!-- <script src="./js/modal.js"></script> -->
+<a href="#"><svg class="up__arrow">
+  <use href="./images/icons.svg#icon-up"></use>
+</svg></a>
     <script src="./js/filter.js"></script>
 <script
       defer
@@ -566,5 +567,6 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./js/mobile-menu.js"></script>
+    <script src="./js/up-button.js"></script>
   </body>
 </html>
