add page contacts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 >Портфоліо</a
               >
             </li class="nav__item">
-            <li><a class="nav__link" href="#">Контакти</a></li>
+            <li><a class="nav__link" href="./contacts.html">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contact">
