--- a/contacts.html
+++ b/contacts.html
@@ -69,75 +69,77 @@
 			<section class="contacts-main">
 				<div class="contacts-container">
 					<div class="contacts-form">
-						<strong class="modal__label"
-							>Залиште свої дані, ми вам передзвонимо</strong
+						<strong class="contacts__label"
+							>Залиште свої дані, і ми вам передзвонимо</strong
 						>
-						<form class="modal-form" name="modal_form">
-							<div class="modal-form__item" role="group">
-								<label class="modal-form__label" for="user_name"
+						<form class="contacts-form" name="contacts_form">
+							<div class="contacts-form__item" role="group">
+								<label class="contacts-form__label" for="user_name"
 									>Ім'я
-									<span class="modal-form__wrapper">
+									<span class="contacts-form__wrapper">
 										<input
-											class="modal-form__field"
+											class="contacts-form__field"
 											type="text"
 											name="user_name"
 											id="user_name"
 										/>
-										<svg class="modal-form__icon" width="18" height="18">
+										<svg class="contacts-form__icon" width="18" height="18">
 											<use href="./images/icons.svg#icon-person-modal"></use>
 										</svg>
 									</span>
 								</label>
-								<label class="modal-form__label" for="user_phone"
+								<label class="contacts-form__label" for="user_phone"
 									>Телефон
-									<span class="modal-form__wrapper">
+									<span class="contacts-form__wrapper">
 										<input
-											class="modal-form__field"
+											class="contacts-form__field"
 											type="tel"
 											name="user_phone"
 											id="user_phone"
 										/>
-										<svg class="modal-form__icon" width="18" height="18">
+										<svg class="contacts-form__icon" width="18" height="18">
 											<use href="./images/icons.svg#icon-phone-modal"></use>
 										</svg>
 									</span>
 								</label>
-								<label class="modal-form__label" for="user_email"
+								<label class="contacts-form__label" for="user_email"
 									>Пошта
-									<span class="modal-form__wrapper">
+									<span class="contacts-form__wrapper">
 										<input
-											class="modal-form__field"
+											class="contacts-form__field"
 											type="email"
 											name="user_email"
 											id="user_email"
 										/>
-										<svg class="modal-form__icon" width="18" height="18">
+										<svg class="contacts-form__icon" width="18" height="18">
 											<use href="./images/icons.svg#icon-email-modal"></use>
 										</svg>
 									</span>
 								</label>
-								<label class="modal-form__label"
+								<label class="contacts-form__label"
 									>Коментар
 									<textarea
-										class="modal-form__text"
+										class="contacts-form__text"
 										name="user_text"
 										rows="9"
 										placeholder="Введіть текст"
 									></textarea>
 								</label>
 							</div>
-							<div class="modal-form__group" role="group">
+							<div class="contacts-form__group" role="group">
 								<input
-									class="modal-form__checkbox"
+									class="contacts-form__checkbox"
 									id="user_agreement"
 									type="checkbox"
 								/>
-								<label class="modal-form__agree" for="user_agreement"
+								<label class="contacts-form__agree" for="user_agreement"
 									>Погоджуюся з розсилкою та приймаю
-									<a class="modal-form__link" href="">Умови договору</a></label
+									<a class="contacts-form__link" href=""
+										>Умови договору</a
+									></label
 								>
 							</div>
-							<button class="modal-form__button" type="submit">
+							<button class="contacts-form__button" type="submit">
 								Відправити
 							</button>
 						</form>
@@ -327,8 +329,6 @@
 				<use href="./images/icons.svg#icon-up"></use>
 			</svg>
 		</a>
-
-		<script src="./js/filter.js"></script>
 		<script
 			defer
 			src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
