add map in contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,7 @@
 				<div class="contacts-container">
 					<div class="contacts-form">
 						<strong class="contacts__label"
-							>Залиште свої дані, і ми вам передзвонимо</strong
+							>Залиште свої дані, ми вам передзвонимо</strong
 						>
 						<form class="contacts-form" name="contacts_form">
 							<div class="contacts-form__item" role="group">
@@ -143,6 +143,29 @@
 								Відправити
 							</button>
 						</form>
+					</div>
+					<div class="contacts-map">
+						<iframe
+							class="contacts-map__iframe"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.779267829554!2d30.535810876973763!3d50.4265840890814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0e033ecbe9%3A0x57a4dffefec77da0!2sLesi%20Ukrainky%20Blvd%2C%2026%2C%20Kyiv%2C%2002000!5e0!3m2!1sen!2sua!4v1688510084451!5m2!1sen!2sua"
+							width="600"
+							height="450"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+					</div>
+					<div class="contacts-map__mob">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.779267829554!2d30.535810876973763!3d50.4265840890814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0e033ecbe9%3A0x57a4dffefec77da0!2sLesi%20Ukrainky%20Blvd%2C%2026%2C%20Kyiv%2C%2002000!5e0!3m2!1sen!2sua!4v1688510084451!5m2!1sen!2sua"
+							width="400"
+							height="300"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
 					</div>
 				</div>
 			</section>
@@ -266,11 +289,15 @@
 				<li class="menu-list__item">
 					<a class="menu-list__link" href="./index.html">Студія</a>
 				</li>
-				<li class="menu-list__item menu-list__item--current">
+				<li class="menu-list__item">
 					<a class="menu-list__link" href="./portfolio.html">Портфоліо</a>
 				</li>
 				<li class="menu-list__item">
-					<a class="menu-list__link" href="#">Контакти</a>
+					<a
+						class="menu-list__link menu-list__item--current"
+						href="./contacts.html"
+						>Контакти</a
+					>
 				</li>
 			</ul>
 			<ul class="menu-contact">
