--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
   <ul class="menu-list">
     <li class="menu-list__item menu-list__item--current"><a class="menu-list__link" href="./index.html">Студія</a></li>
     <li class="menu-list__item"><a class="menu-list__link" href="./portfolio.html">Портфоліо</a></li>
-    <li class="menu-list__item"><a class="menu-list__link" href="#">Контакти</a></li>
+    <li class="menu-list__item"><a class="menu-list__link" href="./contacts.html">Контакти</a></li>
   </ul>
   <ul class="menu-contact">
     <li class="menu-contact__item"><a class="menu-contact__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
